# scout_robot

./: README.md
pan_tilt_ros/pan_tilt_bringup/launch/: panTilt_view.launch
pan_tilt_ros/pan_tilt_description/urdf/: pan_tilt.urdf.xacro  pan_tilt_st.urdf.xacro
pan_tilt_ros/pan_tilt_driver/nodes/: pan_tilt_control.py
scout_robot_driver/: README.md
scout_robot_driver/scout_robot_base/: CMakeLists.txt  package.xml
scout_robot_driver/scout_robot_base/launch/: DK_new.launch  base.launch  base_with_vr.launch  base_without_control.launch
scout_robot_driver/scout_robot_description/: CMakeLists.txt  README.md  package.xml
scout_robot_driver/scout_robot_description/launch/: scout_robot_model.launch
scout_robot_driver/scout_robot_description/urdf/: gazebo.xacro  scout_robot.xacro
scout_robot_driver/scout_robot_viz/: CMakeLists.txt  README.md  package.xml
scout_robot_driver/scout_robot_viz/rviz/: view.rviz
scout_ros_driver/scout_base/launch/: base.launch
scout_ros_driver/scout_description/launch/: DK.launch  support_frame.launch  view_model.launch
scout_ros_driver/scout_description/urdf/: azure-kinect.gv  azure_kinect.urdf.xacro  mobot.urdf  scout_v21.xacro  scout_v2_xacro.xacro  support_frame.xacro
