<?xml version="1.0"?>
<package format="2">
  <name>scout_robot_description</name>
  <version>1.1.0</version>
  <description>ROS pakcage for scout_robot model</description>

  <maintainer email="ye.tian@iquotient-robotics.com">Ye Tian</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/I-Quotient-Robotics/scout_robot_driver</url>
  <url type="repository">https://github.com/I-Quotient-Robotics/scout_robot_driver</url>
  <url type="bugtracker">https://github.com/I-Quotient-Robotics/scout_robot_driverr/issues</url>

  <author email="ye.tian@iquotient-robotics.com">Ye Tian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>rviz</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>scout_robot_viz</depend>

  <export>
  </export>
</package>
